build_script/k8s-demo-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo
  namespace: k8s-demo
  labels:
    app: deploy-pod-name
  annotations:
    prometheus.io/should_be_scraped: "true"
    prometheus.io/scrape_port: "9001"
spec:
  ports:
    - name: http
      port: 8081
      targetPort: 8081
  selector:
    app: deploy-pod-name
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-pod-name
  namespace: deploy-name-space
spec:
  selector:
    matchLabels:
      app: deploy-pod-name
  replicas: 1
  template:
    metadata:
      labels:
        app: deploy-pod-name
    spec:
      nodeSelector:
        nodetype: power
      hostAliases:
        - ip: "10.12.54.1"
          hostnames:
            - "www.gxcospower.cn"
      containers:
        - name: deploy-pod-name
          image: repo.gydev.cn:8082/cos-power/deploy-pod-name:image-version
          resources:
            limits:
              memory: "200Mi"
              cpu: "1"
            requests:
              memory: "200Mi"
              cpu: "0.1"
          ports:
            - containerPort: 8081
