build_script/k8s-demo.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-demow
  namespace: k8s-demo
  labels:
    app: k8s-demo
spec:
  ports:
    - name: http
      port: 8081
      targetPort: 8081
  selector:
    app: minikube-demo
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minikube-demo
  namespace: k8s-demo
spec:
  selector:
    matchLabels:
      app: minikube-demo
  replicas: 2
  template:
    metadata:
      labels:
        app: minikube-demo
    spec:
      containers:
        - name: k8s-demo
          image: k8s-demo:1.0.0
          resources:
            limits:
              memory: "200Mi"
              cpu: "1"
            requests:
              memory: "200Mi"
              cpu: "0.1"
          ports:
            - containerPort: 8081
