build_script/k8s-demo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-demo
  namespace: k8s-demo
spec:
  rules:
  - host: www.k8s-demo.com
    http:
      paths:
      - path: /
        backend:
          serviceName: k8s-demow
          servicePort: 8081
